--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,139 +1,202 @@
 .main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .tableGroup {
-    width: 1200px;
-    height: auto;
-    background-color: white;
-    border-radius: 4px;
-    /* box-shadow: 6px 12px 60px rgb(0 0 0 / 20%); */
-
+  width: 1200px;
+  height: auto;
+  background-color: white;
+  border-radius: 4px;
+  /* box-shadow: 6px 12px 60px rgb(0 0 0 / 20%); */
 }
 
 /* table Header */
 .tableHeader {
-    max-height: 60px;
-    display: flex;
-    justify-content: space-between;
-
-
+  max-height: 60px;
+  display: flex;
+  /* justify-content: space-between; */
 }
 
 .inputSearchGroup,
 .inputSortGroup {
-    padding: 15px;
-
+  padding: 15px;
 }
 
 .inputSearchGroup div {
-    position: absolute;
-    padding: 10px;
-    padding-top: 7px;
-    padding-bottom: 0;
+  position: absolute;
+  padding: 10px;
+  padding-top: 7px;
+  padding-bottom: 0;
 }
 
 .inputSearchGroup input {
-    font-size: 14px;
-    border: 0;
-    max-width: 418px;
-    height: 35px;
-    padding: 4px;
-    padding-top: 5px;
-    padding-left: 45px;
-    background-color: #D9D9D9;
-    border-radius: 4px;
-    outline: none;
-    /* box-shadow: 4px 4px 6px rgb(0 0 0 / 10%); */
+  font-size: 14px;
+  border: 0;
+  max-width: 418px;
+  height: 35px;
+  padding: 4px;
+  padding-top: 5px;
+  padding-left: 45px;
+  background-color: #d9d9d9;
+  border-radius: 4px;
+  outline: none;
+  /* box-shadow: 4px 4px 6px rgb(0 0 0 / 10%); */
 }
 
-.inputSortGroup {}
+.inputSortGroup {
+}
 
 .inputSortGroup button {
-    cursor: pointer;
-    border: 0;
-    border-radius: 4px;
-    min-width: 50px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #D9D9D9;
-    font-size: 14px;
+  cursor: pointer;
+  border: 0;
+  border-radius: 4px;
+  min-width: 50px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #d9d9d9;
+  font-size: 14px;
 }
 
 .inputSortGroup .sortMenu {
-    position: absolute;
-    margin-top: 45px;
-    right: 75px;
-    border-radius: 4px;
-    padding: 10px;
-    width: 150px;
-    background-color: white;
-    box-shadow: 6px 12px 40px rgb(0 0 0 / 20%);
+  position: absolute;
+  margin-top: 45px;
+  /* right:50px; */
+  border-radius: 4px;
+  padding: 10px;
+  width: 300px;
+  background-color: white;
+  box-shadow: 6px 12px 40px rgb(0 0 0 / 20%);
+}
+
+.inputSortGroup .sortMenu ul li {
+  list-style-type: none;
+  margin-top: 8px;
+}
+
+.inputSortGroup .sortMenu ul li input {
+  margin-right: 4px;
+}
+
+.inputSortGroup .sortContainer {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* table Main */
 .tableMain {
-    width: 100%;
-    border: 0;
-    height: auto;
-    border-collapse: collapse;
+  width: 100%;
+  border: 0;
+  height: auto;
+  border-collapse: collapse;
 }
 
-
-
 .tableMain thead th {
-    height: 30px;
-    padding: 0.75rem 2rem;
-    letter-spacing: 0.1rem;
-    font-size: 0.7rem;
-    font-weight: 900;
-    color: white;
-    background-color: #777986;
+  height: 30px;
+  padding: 0.75rem 2rem;
+  letter-spacing: 0.1rem;
+  font-size: 0.7rem;
+  font-weight: 900;
+  color: white;
+  background-color: #777986;
 }
 
 .tableMain tbody th,
 .tableMain tbody td {
-    height: 40px;
-    padding: 1rem 2rem;
+  height: 40px;
+  padding: 1rem 2rem;
 }
 
 .tableMain tbody tr {
-    text-align: center;
+  text-align: center;
 }
 
 .tableMain tbody tr:nth-child(even) {
-    background-color: #77798610;
+  background-color: #77798610;
 }
-
-
 
 /* table Footer */
 .tableFooter {
-    background-color: #27282D;
-    max-height: 60px;
+  background-color: #27282d;
+  max-height: 60px;
 }
 
 .pagination {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .pagination li {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: white;
+  padding: 4px;
+  margin-top: 10px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
+}
+
+@media screen and (max-width: 768px) {
+  .main,
+  .tableFooter {
     background-color: white;
-    padding: 4px;
-    margin-top: 10px;
-    border-radius: 4px;
-    display: flex;
+  }
+
+  .tableGroup {
+    height: 100vh;
+  }
+  .tableHeader {
+    width:100%;
     justify-content: center;
-    align-items: center;
-    margin-left: 8px;
+    flex-direction: row-reverse;
+    position: fixed;
+    top: 0;
+    background-color: white;
+  }
+
+  .tableMain {
+    margin-top: 80px;
+  }
+  .tableMain thead {
+    display: none;
+  }
+  .tableMain tbody,
+  .tableMain tbody tr {
+    display: block;
+    width: 100%;
+  }
+  .tableMain tbody tr th::before,
+  .tableMain tbody tr td::before {
+    font-weight: 900;
+    content: attr(data-title);
+    display: block;
+  }
+  .tableMain tbody tr td,
+  .tableMain tbody tr th {
+    display: block;
+    width: 50%;
+    float: left;
+    height: auto;
+  }
+  .tableMain tbody tr {
+    height: 175px;
+    margin-bottom: 16px;
+  }
+
+  .pagination {
+    margin-right: 15px;
+  }
+  .pagination li {
+    color: white;
+    background-color: #777986;
+  }
 }
